# dicomtostl

./: .gitignore  CMakeLists.txt  DicomToStl.sln  LICENSE  README.md
DicomToStl/: DicomToStl.vcxproj  dirreader.cpp  dirreader.h  formatreader.cpp  formatreader.h  logagent.cpp  logagent.h  main.cpp  stlwriter.cpp  stlwriter.h  triangulator.cpp  triangulator.h  vec3.h  volumereader.cpp  volumereader.h
src/: dirreader.cpp  dirreader.h  formatreader.cpp  formatreader.h  logagent.cpp  logagent.h  main.cpp  stlwriter.cpp  stlwriter.h  timer.h  triangulator.cpp  triangulator.h  vec3.h  volumereader.cpp  volumereader.h
